--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,17 @@
 Package: ScottKnott
 Type: Package
 Title: The ScottKnott Clustering Algoritm
-Version: 1.0.0
-Date: 2009-01-21
-Author: Enio Jelihovschi <eniojelihovs@gmail.com>
-        Jose Claudio Faria <joseclaudio.faria@gmail.com>
-        Sergio Oliveira <solive@uesc.br>
+Version: 1.1.0
+Date: 2010-03-28
+Author: Enio Jelihovschi <eniojelihovs@gmail.com>, Jose Claudio Faria
+        <joseclaudio.faria@gmail.com> and Sergio Oliveira
+        <solive@uesc.br>
 Maintainer: Enio Jelihovschi <eniojelihovs@gmail.com>
 Depends: R (>= 2.6.0), stats, base
-Description: Multiple comparison test of means using the clustering method
-             of Scott & Knott
+Description: Division of an ANOVA experiment treatment means into
+        homogeneous distinct groups using the clustering method of
+        Scott & Knott
 License: GPL (>= 2)
-Packaged: Fri Jan 23 09:16:24 2009; hornik
+Packaged: 2010-03-30 01:30:34 UTC; jcfaria
+Repository: CRAN
+Date/Publication: 2010-04-03 08:06:37
