--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: ScottKnott
 Type: Package
 Title: The ScottKnott Clustering Algoritm
-Version: 1.1.0
-Date: 2010-03-28
+Version: 1.1-2
+Date: 2011-05-11
 Author: Enio Jelihovschi <eniojelihovs@gmail.com>, Jose Claudio Faria
         <joseclaudio.faria@gmail.com> and Sergio Oliveira
         <solive@uesc.br>
@@ -12,6 +12,6 @@ Description: Division of an ANOVA experiment treatment means into
         homogeneous distinct groups using the clustering method of
         Scott & Knott
 License: GPL (>= 2)
-Packaged: 2010-03-30 01:30:34 UTC; jcfaria
 Repository: CRAN
-Date/Publication: 2010-04-03 08:06:37
+Date/Publication: 2011-04-05 15:08:21
+Packaged: 2011-04-05 14:42:40 UTC; jcfaria
