--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,20 @@
 Package: ScottKnott
 Type: Package
 Title: The ScottKnott Clustering Algorithm
-Version: 1.2-0
-Date: 2012-10-06
-Author: Enio Jelihovschi <eniojelihovs@gmail.com>, Jose Claudio Faria
-        <joseclaudio.faria@gmail.com> and Ivan Bezerra Allaman
-        <ivanalaman@gmail.com>
+Version: 1.2-4
+Date: 2013-11-21
+Author: Enio Jelihovschi <eniojelihovs@gmail.com>
+        José Cláudio Faria <joseclaudio.faria@gmail.com>
+        Ivan Bezerra Allaman <ivanalaman@gmail.com>
 Maintainer: Ivan Bezerra Allaman <ivanalaman@gmail.com>
 Depends: R (>= 2.6.0), stats, base
 Description: Division of an ANOVA experiment treatment means into
         homogeneous distinct groups using the clustering method of
         Scott & Knott
 License: GPL (>= 2)
-Packaged: 2012-10-06 11:02:33 UTC; jcfaria
+Encoding: latin1
+LazyLoad: yes
+Packaged: 2013-11-28 21:12:30 UTC; jcfaria
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2012-10-18 18:16:12
+Date/Publication: 2013-11-28 22:28:29
