--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: ScottKnott
 Type: Package
 Title: The ScottKnott Clustering Algorithm
-Version: 1.2-4
-Date: 2013-11-21
+Version: 1.2-5
+Date: 2014-10-29
 Author: Enio Jelihovschi <eniojelihovs@gmail.com>
         José Cláudio Faria <joseclaudio.faria@gmail.com>
         Ivan Bezerra Allaman <ivanalaman@gmail.com>
@@ -12,9 +12,11 @@ Description: Division of an ANOVA experiment treatment means into
         homogeneous distinct groups using the clustering method of
         Scott & Knott
 License: GPL (>= 2)
+URL: https://github.com/jcfaria/ScottKnott,
+        http://nbcgib.uesc.br/lec/software/pac-r/scottknott
 Encoding: latin1
 LazyLoad: yes
-Packaged: 2013-11-28 21:12:30 UTC; jcfaria
+Packaged: 2014-09-29 16:15:33 UTC; ivan
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-11-28 22:28:29
+Date/Publication: 2014-09-29 23:05:06
